Shortens redirect time

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>RSVP for Processing Text in Python Tutorial</title>
-  <meta http-equiv="Refresh" content="5; url=https://docs.google.com/forms/d/e/1FAIpQLSeupodoaiexjOY1gpMu6XdPeZrHyDXTzt4Elji8z7HIJ2Fh_Q/viewform?usp=sf_link">
+  <meta http-equiv="Refresh" content="url=https://docs.google.com/forms/d/e/1FAIpQLSeupodoaiexjOY1gpMu6XdPeZrHyDXTzt4Elji8z7HIJ2Fh_Q/viewform?usp=sf_link">
 </head>
 
 <body>
