--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-You are being redirected to a Google form.
+You are being redirected to a Google form. If this redirect does not happen automatically, you may access the form <a href="https://docs.google.com/forms/d/e/1FAIpQLSeupodoaiexjOY1gpMu6XdPeZrHyDXTzt4Elji8z7HIJ2Fh_Q/viewform?usp=sf_link">here</a>.
 </body>
 
 </html>
