Updates people categories.

--- a/people.html
+++ b/people.html
@@ -6,7 +6,7 @@ permalink: /people/
 published: true
 images: /assets/images/factslab-photo.jpg
 ---
-{%- assign positions_order = "Faculty,Postdocs,Grads,Undergrads,Grad Alumni,Undergrad Alumni" | split: ',' -%}
+{%- assign positions_order = "Faculty,Postdoc,PhD,Masters,Undergrad,PhD Alumni,Masters Alumni,Undergrad Alumni" | split: ',' -%}
 
 <section id="people" class="people__section nopad">
   <div class="filter-wrapper">
