Updates people, projects, and papers.

--- a/people.html
+++ b/people.html
@@ -6,7 +6,7 @@ permalink: /people/
 published: true
 images: /assets/images/factslab-photo.jpg
 ---
-{%- assign positions_order = "Faculty,Postdoc,PhD,Masters,Undergrad,PhD Alumni,Masters Alumni,Undergrad Alumni" | split: ',' -%}
+{%- assign positions_order = "Faculty,Postdoc,PhD,Masters,Undergrad,Postdoc Alumni,PhD Alumni,Masters Alumni,Undergrad Alumni,Other Alumni" | split: ',' -%}
 
 <section id="people" class="people__section nopad">
   <div class="filter-wrapper">
@@ -14,7 +14,10 @@ images: /assets/images/factslab-photo.jpg
     <div id="filterContainer" class="scroll-container">
       <button class="filter-btn active" onclick="filterSelection('all')">All</button>
       {%- for position in positions_order -%}
+        {%- assign filtered_people_check = site.people | where: 'category', position -%}
+        {%- if filtered_people_check.size > 0 -%}
       <button class="filter-btn" onclick="filterSelection('{{ position | downcase | replace: ' ', '-' }}')">{{ position }}</button>
+        {%- endif -%}
       {%- endfor -%}
     </div>
     <span class="arrow right-arrow" onclick="scrollRightAction()">&#10095;</span>
@@ -27,7 +30,7 @@ images: /assets/images/factslab-photo.jpg
         {%- assign sorted_people = filtered_people | sort: 'order' -%}
 
         {%- for p in sorted_people -%}
-        <div class="person-page__grid {{ position | downcase | replace: ' ', '-' }}" style="display: {%- case position -%}{%- when 'PhD Alumni','Masters Alumni','Undergrad Alumni' -%}none{%- else -%}block{% endcase %}">
+        <div class="person-page__grid {{ position | downcase | replace: ' ', '-' }}" style="display: {%- case position -%}{%- when 'Postdoc Alumni','PhD Alumni','Masters Alumni','Undergrad Alumni','Other Alumni' -%}none{%- else -%}block{% endcase %}">
           <a href="{{ p.url }}" class="person-page">
             <img width="400" style="width: 100%; max-width: 280px; aspect-ratio: 1;" src="{{ p.image }}" alt="{{ p.title }}">
             <p class="person-page__name">{{ p.title }}</p>
